# HomeFlow_Embedded_Final

./: .gitignore  CMakeLists.txt  README.rst  app.overlay  prj.conf  recover_script.sh
inc/: UI.h  bme.h  display.h  hr.h  imu.h  mutexes.h  r_enc.h  rc_filter.h  ring_buf.h  spi.h  temp.h
src/: bluetooth.c  bme.c  display.c  hr.c  imu.c  main.c  mutexes.c  r_enc.c  rc_filter.c  ring_buf.c  spi.c  temp.c  uart_async_adapter.c
